<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1" 
    android:background="@drawable/fondo" >

    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/pong" android:layout_gravity="center" android:layout_marginTop="20dip" android:layout_marginBottom="50dip" android:id="@+id/pong_logo"></ImageView>

    <TextView android:layout_height="wrap_content" android:text="@string/menu_play" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:background="@drawable/button_bg" android:layout_gravity="center" android:gravity="center_vertical|center_horizontal" android:layout_marginBottom="30dip" android:id="@+id/play_button"></TextView>
    <TextView android:layout_height="wrap_content" android:text="@string/menu_options" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:background="@drawable/button_bg" android:layout_gravity="center" android:gravity="center_vertical|center_horizontal" android:layout_marginBottom="30dip" android:id="@+id/options_button"></TextView>
    <TextView android:layout_height="wrap_content" android:text="@string/menu_exit" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:background="@drawable/button_bg" android:layout_gravity="center" android:gravity="center_vertical|center_horizontal" android:id="@+id/exit_button"></TextView>
    <ImageView android:id="@+id/imageView1" android:layout_width="314dp" android:layout_height="wrap_content" android:src="@drawable/vc" android:layout_gravity="center|bottom"></ImageView>
</LinearLayout>

